--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
 </head>
-<body style=" background-color: #fefefe;">
-    <nav class="navbar navbar-expand-lg " style="background-color: #011d36;">
+<body style=" background-color: #e6e6e6;">
+    <nav class="navbar navbar-expand-lg " style="background-color: #280137;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">VCarro</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,7 +84,7 @@
             <h3>Frequently Asked Questions</h3>
             <p>In case you have more questions, feel free to reach out to us.</p>
         </div>
-        <br><br><br><br><br>
+        <br><br><br>
     
         <div class="ques">
             <div class="ques-container one">
